--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "server"
 path = "src/server.rs"
 
 [dependencies]
+thiserror = "2.0.18"
 bevy = "0.18.0"
 bevy_prototype_lyon = "0.16.0"
 rand = "0.9.2"
