--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/server.rs"
 
 [dependencies]
 thiserror = "2.0.18"
+hex = "0.4"
 bevy = "0.18.0"
 bevy_prototype_lyon = "0.16.0"
 rand = "0.9.2"
