--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ bevy = "0.18.0"
 bevy_prototype_lyon = "0.16.0"
 rand = "0.9.2"
 random = "0.14.1"
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
