--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ rand = "0.9.2"
 random = "0.14.1"
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
+tokio = { version = "1.49.0", features = ["full"] }
